newtype-tools/tests/trybuild/newtype/struct-list-path-invalid.stderr
error: expected `(try_)from`, `(try_)into`, `add(_assign)`, `bitand(_assign)`, `bitor(_assign)`, `bitxor(_assign)`, `mul(_assign)`, `partial_eq`, `sub(_assign)`, `iter`
 --> tests/trybuild/newtype/struct-list-path-invalid.rs:2:11
  |
2 | #[newtype(invalid_path)]
  |           ^^^^^^^^^^^^
