newtype-tools/tests/trybuild/newtype/struct-list-path-invalid.rs
#[derive(newtype_tools::Newtype)]
#[newtype(invalid_path)]
struct Oranges(u32);

fn main() {}
